# lunar_tools_prototypes

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_ISSUES.md  MIGRATION_GUIDE.md  README.md  SECURITY.md  SECURITY_CLEANUP_PLAN.md  hackathon_demo.py  lunar_tools_demo.py  pyproject.toml  requirements.txt  settings.toml  utils.py
.gemini/: GEMINI.md  tasks.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.html  og-image.html
docs/superpowers/plans/: 2026-03-25-afterwords-extensions.md  2026-03-25-audio-mirror-experiment.md  2026-03-25-mirror-of-truth-rewrite.md  2026-03-25-shared-infrastructure.md
docs/superpowers/specs/: 2026-03-25-audio-mirror-and-mlx-migration-design.md  2026-03-26-github-pages-gallery-design.md
prototypes/: acoustic-fingerprint-painter.py  ai-dream-interpreter-prototype.py  ai-fashion-show-prototype.py  ai-mirror-of-truth.py  apocalypse_experience.py  audio-reactive-fractal-forest.py  audio_mirror.py  augmented_audio_tours.py  chat-room-narrative-quilt.py  collaborative-canvas.py  collaborative_art.py  cosmic-soundscape.py  data-driven-cityscape.py  dynamic_visuals.py  emotional-landscape-generator-prototype.py  escape_room.py  evolving-cosmic-mural-prototype.py  example_base_usage.py  generative-poetry-mosaic.py  interactive-storytelling-canvas-prototype.py  interactive_storytelling.py  neural-transfer-music-visualizer.py  real-time-glitch-art-lab.py  sentiment_analysis_display.py  speech_activated_art.py  temporal-art-gallery-prototype.py  time-shifted-echo-chamber.py  virtual-cloud-chamber.py  virtual_time_travel.py  whispers.py
src/lunar_tools/: __init__.py
src/lunar_tools_art/: __init__.py  audio_mirror_fsm.py  config.py  emotion.py  exceptions.py  llm_backends.py  loop_utils.py  manager.py  prosody.py  prototype_base.py  tools.py  utils.py  voice_client.py
tests/: test_audio_mirror.py  test_audio_mirror_fsm.py  test_emotion.py  test_llm_backends.py  test_lunar_tools_art.py  test_mirror_of_truth.py  test_prosody.py  test_prototype_base.py  test_utils.py  test_voice_client.py
