[project]
name = "lunar_tools_art"
version = "0.1.0"
description = "A collection of audiovisual art installations using Lunar Tools."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ollama",
    "lunar-tools",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-logging",
    "python-dotenv",
    "librosa",
    "pydub",
]

[project.optional-dependencies]
vision = [
    "opencv-python>=4.10,<5",
]
audio = [
    "soundfile",
]
gpu = [
    # Add GPU-specific dependencies here, e.g., "torch[cuda]"
]

[project.urls]
Homepage = "https://github.com/yourusername/lunar_tools_art"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
lunar-art = "lunar_tools_art:main"

[tool.setuptools.packages.find]
where = ["src"]
